Fixes #9 - thumbnails aren't aligned well in the clearing lightbox

--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -227,13 +227,13 @@ $clearing-carousel-bg: #111;
 
 // We use these to style captions
 $clearing-caption-font-color: #ccc;
-$clearing-caption-font-size: 1rem;
-$clearing-caption-padding: 10px 30px 20px;
+$clearing-caption-font-size: 1.3rem;
+//$clearing-caption-padding: 10px 30px 20px;
 
 // We use these to make the image and carousel height and style
-$clearing-active-img-height: 80%;
-$clearing-carousel-height: 120px;
-$clearing-carousel-thumb-width: 120px;
+$clearing-active-img-height: 85%;
+$clearing-carousel-height: 90px;
+$clearing-carousel-thumb-width: 220px;
 // $clearing-carousel-thumb-active-border: 1px solid rgb(255,255,255);
 
 // Dropdown
